nimcuda/cublas_api.nim


proc cublasCreate_v2*(handle: ptr cublasHandle_t): cublasStatus_t {.cdecl,
    importc: "cublasCreate_v2", dynlib: libName.}
proc cublasDestroy_v2*(handle: cublasHandle_t): cublasStatus_t {.cdecl,
    importc: "cublasDestroy_v2", dynlib: libName.}
proc cublasGetVersion_v2*(handle: cublasHandle_t; version: ptr cint): cublasStatus_t {.
    cdecl, importc: "cublasGetVersion_v2", dynlib: libName.}
proc cublasGetProperty*(`type`: libraryPropertyType; value: ptr cint): cublasStatus_t {.
    cdecl, importc: "cublasGetProperty", dynlib: libName.}
proc cublasGetCudartVersion*(): csize_t {.cdecl, importc: "cublasGetCudartVersion",
                                       dynlib: libName.}
proc cublasSetWorkspace_v2*(handle: cublasHandle_t; workspace: pointer;
                           workspaceSizeInBytes: csize_t): cublasStatus_t {.cdecl,
    importc: "cublasSetWorkspace_v2", dynlib: libName.}
proc cublasSetStream_v2*(handle: cublasHandle_t; streamId: cudaStream_t): cublasStatus_t {.
    cdecl, importc: "cublasSetStream_v2", dynlib: libName.}
proc cublasGetStream_v2*(handle: cublasHandle_t; streamId: ptr cudaStream_t): cublasStatus_t {.
    cdecl, importc: "cublasGetStream_v2", dynlib: libName.}
proc cublasGetPointerMode_v2*(handle: cublasHandle_t; mode: ptr cublasPointerMode_t): cublasStatus_t {.
    cdecl, importc: "cublasGetPointerMode_v2", dynlib: libName.}
proc cublasSetPointerMode_v2*(handle: cublasHandle_t; mode: cublasPointerMode_t): cublasStatus_t {.
    cdecl, importc: "cublasSetPointerMode_v2", dynlib: libName.}
proc cublasGetAtomicsMode*(handle: cublasHandle_t; mode: ptr cublasAtomicsMode_t): cublasStatus_t {.
    cdecl, importc: "cublasGetAtomicsMode", dynlib: libName.}
proc cublasSetAtomicsMode*(handle: cublasHandle_t; mode: cublasAtomicsMode_t): cublasStatus_t {.
    cdecl, importc: "cublasSetAtomicsMode", dynlib: libName.}
proc cublasGetMathMode*(handle: cublasHandle_t; mode: ptr cublasMath_t): cublasStatus_t {.
    cdecl, importc: "cublasGetMathMode", dynlib: libName.}
proc cublasSetMathMode*(handle: cublasHandle_t; mode: cublasMath_t): cublasStatus_t {.
    cdecl, importc: "cublasSetMathMode", dynlib: libName.}
proc cublasGetSmCountTarget*(handle: cublasHandle_t; smCountTarget: ptr cint): cublasStatus_t {.
    cdecl, importc: "cublasGetSmCountTarget", dynlib: libName.}
proc cublasSetSmCountTarget*(handle: cublasHandle_t; smCountTarget: cint): cublasStatus_t {.
    cdecl, importc: "cublasSetSmCountTarget", dynlib: libName.}
proc cublasGetStatusName*(status: cublasStatus_t): cstring {.cdecl,
    importc: "cublasGetStatusName", dynlib: libName.}
proc cublasGetStatusString*(status: cublasStatus_t): cstring {.cdecl,
    importc: "cublasGetStatusString", dynlib: libName.}
proc cublasLoggerConfigure*(logIsOn: cint; logToStdOut: cint; logToStdErr: cint;
                           logFileName: cstring): cublasStatus_t {.cdecl,
    importc: "cublasLoggerConfigure", dynlib: libName.}
proc cublasSetLoggerCallback*(userCallback: cublasLogCallback): cublasStatus_t {.
    cdecl, importc: "cublasSetLoggerCallback", dynlib: libName.}
proc cublasGetLoggerCallback*(userCallback: ptr cublasLogCallback): cublasStatus_t {.
    cdecl, importc: "cublasGetLoggerCallback", dynlib: libName.}
proc cublasSetVector*(n: cint; elemSize: cint; x: pointer; incx: cint;
                     devicePtr: pointer; incy: cint): cublasStatus_t {.cdecl,
    importc: "cublasSetVector", dynlib: libName.}
proc cublasSetVector_64*(n: clonglong; elemSize: clonglong; x: pointer;
                        incx: clonglong; devicePtr: pointer; incy: clonglong): cublasStatus_t {.
    cdecl, importc: "cublasSetVector_64", dynlib: libName.}
proc cublasGetVector*(n: cint; elemSize: cint; x: pointer; incx: cint; y: pointer;
                     incy: cint): cublasStatus_t {.cdecl,
    importc: "cublasGetVector", dynlib: libName.}
proc cublasGetVector_64*(n: clonglong; elemSize: clonglong; x: pointer;
                        incx: clonglong; y: pointer; incy: clonglong): cublasStatus_t {.
    cdecl, importc: "cublasGetVector_64", dynlib: libName.}
proc cublasSetMatrix*(rows: cint; cols: cint; elemSize: cint; A: pointer; lda: cint;
                     B: pointer; ldb: cint): cublasStatus_t {.cdecl,
    importc: "cublasSetMatrix", dynlib: libName.}
proc cublasSetMatrix_64*(rows: clonglong; cols: clonglong; elemSize: clonglong;
                        A: pointer; lda: clonglong; B: pointer; ldb: clonglong): cublasStatus_t {.
    cdecl, importc: "cublasSetMatrix_64", dynlib: libName.}
proc cublasGetMatrix*(rows: cint; cols: cint; elemSize: cint; A: pointer; lda: cint;
                     B: pointer; ldb: cint): cublasStatus_t {.cdecl,
    importc: "cublasGetMatrix", dynlib: libName.}
proc cublasGetMatrix_64*(rows: clonglong; cols: clonglong; elemSize: clonglong;
                        A: pointer; lda: clonglong; B: pointer; ldb: clonglong): cublasStatus_t {.
    cdecl, importc: "cublasGetMatrix_64", dynlib: libName.}
proc cublasSetVectorAsync*(n: cint; elemSize: cint; hostPtr: pointer; incx: cint;
                          devicePtr: pointer; incy: cint; stream: cudaStream_t): cublasStatus_t {.
    cdecl, importc: "cublasSetVectorAsync", dynlib: libName.}
proc cublasSetVectorAsync_64*(n: clonglong; elemSize: clonglong; hostPtr: pointer;
                             incx: clonglong; devicePtr: pointer; incy: clonglong;
                             stream: cudaStream_t): cublasStatus_t {.cdecl,
    importc: "cublasSetVectorAsync_64", dynlib: libName.}
proc cublasGetVectorAsync*(n: cint; elemSize: cint; devicePtr: pointer; incx: cint;
                          hostPtr: pointer; incy: cint; stream: cudaStream_t): cublasStatus_t {.
    cdecl, importc: "cublasGetVectorAsync", dynlib: libName.}
proc cublasGetVectorAsync_64*(n: clonglong; elemSize: clonglong; devicePtr: pointer;
                             incx: clonglong; hostPtr: pointer; incy: clonglong;
                             stream: cudaStream_t): cublasStatus_t {.cdecl,
    importc: "cublasGetVectorAsync_64", dynlib: libName.}
proc cublasSetMatrixAsync*(rows: cint; cols: cint; elemSize: cint; A: pointer; lda: cint;
                          B: pointer; ldb: cint; stream: cudaStream_t): cublasStatus_t {.
    cdecl, importc: "cublasSetMatrixAsync", dynlib: libName.}
proc cublasSetMatrixAsync_64*(rows: clonglong; cols: clonglong; elemSize: clonglong;
                             A: pointer; lda: clonglong; B: pointer; ldb: clonglong;
                             stream: cudaStream_t): cublasStatus_t {.cdecl,
    importc: "cublasSetMatrixAsync_64", dynlib: libName.}
proc cublasGetMatrixAsync*(rows: cint; cols: cint; elemSize: cint; A: pointer; lda: cint;
                          B: pointer; ldb: cint; stream: cudaStream_t): cublasStatus_t {.
    cdecl, importc: "cublasGetMatrixAsync", dynlib: libName.}
proc cublasGetMatrixAsync_64*(rows: clonglong; cols: clonglong; elemSize: clonglong;
                             A: pointer; lda: clonglong; B: pointer; ldb: clonglong;
                             stream: cudaStream_t): cublasStatus_t {.cdecl,
    importc: "cublasGetMatrixAsync_64", dynlib: libName.}
proc cublasXerbla*(srName: cstring; info: cint) {.cdecl, importc: "cublasXerbla",
    dynlib: libName.}
##  --------------- CUBLAS BLAS1 Functions  ----------------
